--- a/README
+++ b/README
@@ -1,10 +1,3 @@
-explorercanvas JAR
+ExplorerCanvas WebJar
 
-http://code.google.com/p/explorercanvas/
-
-
-Current Version:
-r3
-
-Previous Versions:
-
+More info: http://webjars.org
